# fish-speech-mlx

./: .gitignore  README.md  bench_compare.py  pyproject.toml
fish_speech_mlx/: __init__.py  dac_decoder.py  dac_encoder.py  e2e_pipeline.py  generate.py  load_weights.py  model.py
run/: dac_encoder.py  e2e_pipeline.py  generate.py  load_weights.py
