[project]
name = "fish-speech-s2-pro-mlx"
version = "0.1.0"
description = "MLX inference for Fish Audio S2 Pro TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.26.0",
    "soundfile>=0.13.0",
    "transformers>=4.50.0",
    "huggingface-hub>=0.25.0",
    "safetensors>=0.4.0",
    "scipy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fish-speech-mlx = "fish_speech_mlx.e2e_pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["fish_speech_mlx"]
